fixed dark mode

--- a/mission/style.css
+++ b/mission/style.css
@@ -20,7 +20,7 @@ body.light {
 }
 
 body.dark {
-    background-color: ;
+    background-color: #333;
     color: white;
 }
 
